--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "src/ros_odrive"]
 	path = src/ros_odrive
 	url = https://github.com/odriverobotics/ros_odrive.git
+
+[submodule "src/joystick_ros2"]
+	path = src/joystick_ros2
+	url = https://github.com/FurqanHabibi/joystick_ros2.git
