--- a/src/main_ctrl/package.xml
+++ b/src/main_ctrl/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>interfaces</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>ros_odrive</exec_depend>
   <build_depend>sensor_msgs</build_depend>
 
   <export>
