--- a/src/main_ctrl/package.xml
+++ b/src/main_ctrl/package.xml
@@ -16,7 +16,8 @@
   <exec_depend>interfaces</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>ros_odrive</exec_depend>
-  <build_depend>sensor_msgs</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
 
   <export>
     <build_type>ament_python</build_type>
