--- a/src/main_ctrl/package.xml
+++ b/src/main_ctrl/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>interfaces</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>ros_odrive</exec_depend>
+  <exec_depend>numpy</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
 
 
